--- a/1_鼠标滑过显示详情.html
+++ b/1_鼠标滑过显示详情.html
@@ -46,6 +46,7 @@
             /* 隐藏 */
             display:none;
             z-index:-1;
+            /* 注意层级问题！！！这里是解决重合边框问题 */
         }
         .box:hover{
             border-bottom-color: #fff;
