--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
+
 <body>
-    <script src="/jS/1.js"></script>
+    <!-- <script src="/jS/1.js"></script> -->
+    <script>
+        let time = new Date();
+        console.log(time);
+        console.log(typeof time);//object
+        console.dir(time)
+        /*
+        获取的是当前客服端（本机电脑）本地的时间
+        这个时间用户是可以自己修改的，所以不能作为重要的参考依据
+
+        Mon Jun 15 2020 20:49:38 GMT+0800 (中国标准时间)
+
+        获取的结果不是字符串是对象类型的，属于日期对象（或者说Date这个类的实例对象
+
+
+         */
+
+
+    </script>
 </body>
+
 </html>
